@@ -13,11 +13,15 @@
 namespace Twig\Node\Expression;
 
 use Twig\Compiler;
+use Twig\Node\Expression\OperatorEscapeInterface;
+use Twig\Node\Expression\Ternary\ConditionalTernary;
 
-class ConditionalExpression extends AbstractExpression
+class ConditionalExpression extends AbstractExpression implements OperatorEscapeInterface
 {
     public function __construct(AbstractExpression $expr1, AbstractExpression $expr2, AbstractExpression $expr3, int $lineno)
     {
+        trigger_deprecation('twig/twig', '3.16', \sprintf('"%s" is deprecated; use "%s" instead.', __CLASS__, ConditionalTernary::class));
+
         parent::__construct(['expr1' => $expr1, 'expr2' => $expr2, 'expr3' => $expr3], [], $lineno);
     }
 
@@ -41,5 +45,10 @@ class ConditionalExpression extends AbstractExpression
                 ->subcompile($this->getNode('expr3'))
                 ->raw('))');
         }
+    }
+
+    public function getOperandNamesToEscape(): array
+    {
+        return ['expr2', 'expr3'];
     }
 }
