@@ -63,9 +63,13 @@ final class TypesTokenParser extends AbstractTokenParser
             $first = false;
 
             $nameToken = $stream->expect(Token::NAME_TYPE);
-            $isOptional = null !== $stream->nextIf(Token::PUNCTUATION_TYPE, '?');
 
-            $stream->expect(Token::PUNCTUATION_TYPE, ':', 'A type name must be followed by a colon (:)');
+            if ($stream->nextIf(Token::OPERATOR_TYPE, '?:')) {
+                $isOptional = true;
+            } else {
+                $isOptional = null !== $stream->nextIf(Token::PUNCTUATION_TYPE, '?');
+                $stream->expect(Token::PUNCTUATION_TYPE, ':', 'A type name must be followed by a colon (:)');
+            }
 
             $valueToken = $stream->expect(Token::STRING_TYPE);
 
