@@ -1,6 +1,6 @@
 <?php
 
-namespace Twig\Tests\Node\Expression;
+namespace Twig\Tests\Node\Expression\Binary;
 
 /*
  * This file is part of Twig.
@@ -11,22 +11,19 @@ namespace Twig\Tests\Node\Expression;
  * file that was distributed with this source code.
  */
 
+use Twig\Node\Expression\Binary\NullCoalesceBinary;
 use Twig\Node\Expression\ConstantExpression;
-use Twig\Node\Expression\NullCoalesceExpression;
 use Twig\Node\Expression\Variable\ContextVariable;
 use Twig\Test\NodeTestCase;
 
-/**
- * @group legacy
- */
 class NullCoalesceTest extends NodeTestCase
 {
     public static function provideTests(): iterable
     {
         $left = new ContextVariable('foo', 1);
         $right = new ConstantExpression(2, 1);
-        $node = new NullCoalesceExpression($left, $right, 1);
+        $node = new NullCoalesceBinary($left, $right, 1);
 
-        return [[$node, "((// line 1\n\$context[\"foo\"]) ?? (2))"]];
+        return [[$node, "(// line 1\n\$context[\"foo\"] ?? 2)"]];
     }
 }
